# repokit

./: .gitignore  Cargo.toml  README.md  build.sh  releases.toml  repo-clean-topics.py
.ci/: prepare.sh
.github/workflows/: ci.yml
.sqlx/: query-64e4f3560580ae4f0d25066fab37c5c0d4a9b9582cc01ffb2415fdfe4078101f.json  query-84d6184d13412ecfa5ec092c3b1308338128d22afc51c097d268e8ea964f8834.json  query-f349d35e7fe135410391e6cd678c2f2959e2e7f43be35603152ed0bbd4510e43.json
autobuild/: defines  prepare
discourse-notifier/: Cargo.toml
discourse-notifier/src/: main.rs
repo-manifest/: Cargo.toml  LICENSE  README.md  example.toml  releases.toml
repo-manifest/data/: recipe-i18n.json
repo-manifest/src/: gz.rs  main.rs  parser.rs  scan.rs  sqfs.rs  xz.rs
repo-notifier/: Cargo.toml  README.md
repo-notifier/assets/: repo-notifier.conf  repo-notifier.service
repo-notifier/migrations/: 20210322074259_initial.sql
repo-notifier/src/: main.rs
repo-redirect/: Cargo.toml
repo-redirect/contrib/: aosc-repo-redirect.service
repo-redirect/src/: main.rs  parser.rs
repo-redirect/templates/: 404.html  nav.html  thank-you.html
repo-redirect/tests/: livekit.json  recipe.json
topic-manifest/: Cargo.toml
topic-manifest/src/: network.rs  parser.rs  scan.rs
