[package]
name = "discourse-notifier"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"] }
tokio = { version =  "^1", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.15", features = ["macros"] }
actix-web = "^4"
ammonia = "^4"
