[package]
name = "repo-manifest"
version = "0.1.0"
authors = ["liushuyu <liushuyu011@gmail.com>"]
description = "Repo Manifest Generator"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rayon = "1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
xz2 = "0.1"
sha2 = "0.10"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
toml = "0.5"
clap = { version = "^3", features = ["derive"] }
walkdir = "2"
parking_lot = "0.11"
hex = "0.4"
