[package]
name = "repository-notifier"
version = "0.1.0"
authors = ["liushuyu <liushuyu011@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version =  "^1", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
defaultmap = "0.6"
sqlx = { version = "0.7", default-features = false, features = [ "runtime-tokio-native-tls", "migrate", "sqlite", "macros" ] }
once_cell = "1"
inotify = { version = "0.10", features = [ "stream" ] }
futures-util = "0.3"
bincode = "^1"
redis = "0.25.4"
