[package]
name = "repo-redirect"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "^4"
anyhow = "^1"
dashmap = "^5"
env_logger = "0.11"
log = "0.4"
serde = { version ="^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", features = ["rt", "rt-multi-thread", "time", "macros", "fs", "io-util"] }
inotify = { version = "0.10", features = [ "stream" ] }
futures = "0.3"
futures-util = "0.3"
sailfish = "0.8"
